--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/compiler-cli": "~9.0.0-next.9",
     "@angular/language-service": "~9.0.0-next.9",
     "@angularclass/hmr": "2.1.3",
+    "@hirez_io/observer-spy": "^2.1.0",
     "@types/jasmine": "~3.4.0",
     "@types/jasmine-given": "2.6.4",
     "@types/jasminewd2": "~2.0.3",
